# Codex_oldDt5

./: .gitmodules  CMakeLists.txt  README.md  cardstructure.cpp  cardstructure.h  cardstructure_BACKUP_48006.h  cardstructure_BASE_48006.h  cardstructure_REMOTE_48006.h  cardwidget.cpp  cardwidget.h  cardwidget.ui  codexmainwindow.cpp  codexmainwindow.h  codexmainwindow.ui  codexstyle.cpp  codexstyle.h  codextts.cpp  codextts.h  datastructures.cpp  datastructures.h  deckcreatorwidget.cpp  deckcreatorwidget.h  deckcreatorwidget.ui  decklistwidget.cpp  decklistwidget.h  decklistwidget.ui  deckmanagerwidget.cpp  deckmanagerwidget.h  deckmanagerwidget.ui  deckstatsmanager.cpp  deckstatsmanager.h  deckstatswidget.cpp  deckstatswidget.h  deckstatswidget.ui  deckwidget.cpp  deckwidget.h  deckwidget.ui  inputform.ui  inputwidget.cpp  inputwidget.h  (+11 more)
scripts/: test_script.py  tts_engine.py
